# ******************************************************************************
#
# chcss, a CSS naming hierarchy enforcer.
#
# Copyright 2021-2024 Jeremy A Gray <gray@flyquackswim.com>.
#
# All rights reserved.
#
# SPDX-License-Identifier: GPL-3.0-or-later
#
# ******************************************************************************

[build-system]

# Poetry.
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool]

[tool.bandit.assert_used]

exclude_dirs = [
  ".git",
  ".pytest_cache",
  ".tox",
  ".venv",
  "dist",
  "docs",
  "htmlcov",
  "chcss.egg-info",
]

skips = [
  "**/test_*.py",
  "tests/**",
]

[tool.black]

line-length = 88
include = '\.pyi?$'
exclude = '''

(
  /(
    \.git
    | \.pytest_cache
    | __pycache__
    | htmlcov
  )/
)
'''

[tool.chcss]

namespaces = [
  "gf_accounts",
  "gf_blog",
  "gf_content",
  "gf_news",
]

functions = [
  "c",
  "l",
]

components = [
  "navbar",
  "footer",
  "list",
]

modifiers = [
  "reverse",
]

[tool.isort]

ensure_newline_before_comments = true
force_single_line = true
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.pccc]

header_length = 50
body_length = 72
rewrap = true
spell_check = false
repair = false

types = [
  "build",
  "ci",
  "depends",
  "docs",
  "feat",
  "fix",
  "perf",
  "refactor",
  "release",
  "style",
  "test"
]

scopes = [
  "config",
  "parser"
]

footers = [
  "signed-off-by"
]

required_footers = [
  "signed-off-by"
]

[tool.poetry]

authors = [
  "Jeremy A Gray <gray@flyquackswim.com>",
]
description = "chcss, a CSS naming hierarchy enforcer"
name = "chcss"
version = "0.0.3"
license = "GPL-3.0-or-later"
maintainers = [
  "Jeremy A Gray <gray@flyquackswim.com>",
]
readme = "README.rst"
homepage = "https://github.com/jeremyagray/chcss"
repository = "https://github.com/jeremyagray/chcss"

classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing :: Markup :: HTML",
]

packages = [
  { include = "chcss" },
]

include = [
  "README.rst",
  "LICENSE.rst",
  "chcss.toml",
  "docs/**/*",
]

[tool.poetry.dependencies]

pyparsing = ">=3,<4"
python = ">=3.10.1,<4"
toml = ">=0"

[tool.poetry.group.dev.dependencies]

Sphinx = ">=7"
black = ">=24"
flake8 = ">=6"
flake8-docstrings = ">=1"
isort = ">=5"
pccc = ">=0"
pre-commit = ">=3"
pytest = ">=8"
pytest-cov = ">=4"
tox = ">=4"

[tool.poetry.scripts]

chcss = "chcss:main"

[tool.poetry.urls]

"Issues" = "https://github.com/jeremyagray/chcss/issues"
"Documentation" = "https://chcss.readthedocs.io/"
"Repository" = "https://github.com/jeremyagray/chcss"
